fixtures/cs-hash-02/good/gen-salt-no-args.ts
import bcrypt from "bcrypt";

export function hashPassword(_password: string) {
	return bcrypt.genSalt();
}
