fixtures/cs-hash-02/bad/gen-salt-sync-weak.ts
import { genSaltSync } from "bcrypt";

export function hashPassword(password: string) {
	return genSaltSync(6);
}
